deal with 32 vs. 64 bit pointers, from joda@pdc.kth.se as part of PR#6149